--- a/Organizer.css
+++ b/Organizer.css
@@ -1,5 +1,5 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 460px;
+  min-height: 450px;
 }
 
 .u-section-1 .u-image-1 {
@@ -47,7 +47,7 @@
 
 .u-section-2 .u-text-1 {
   font-weight: 700;
-  margin: 40px auto 0 0;
+  margin: 25px auto 25px 0;
 }.u-section-3 .u-sheet-1 {
   min-height: 526px;
 }
