--- a/Challenge.css
+++ b/Challenge.css
@@ -1,5 +1,5 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 460px;
+  min-height: 430px;
 }
 
 .u-section-1 .u-image-1 {
@@ -17,7 +17,7 @@
 .u-section-1 .u-image-3 {
   width: 380px;
   height: 350px;
-  margin: -350px auto 50px 1px;
+  margin: -350px auto 30px 2px;
 }
 
 @media (max-width: 575px) {
@@ -43,17 +43,17 @@
     margin-left: 0;
   }
 }.u-section-2 .u-sheet-1 {
-  min-height: 816px;
+  min-height: 789px;
 }
 
 .u-section-2 .u-text-1 {
-  margin: 41px auto 0 0;
+  margin: 25px auto 0 0;
 }
 
 .u-section-2 .u-text-2 {
   font-size: 1rem;
   line-height: 3;
-  margin: 0 auto 0 0;
+  margin: 25px auto 0 0;
 }
 
 .u-section-2 .u-btn-1 {
@@ -81,43 +81,35 @@
 }
 
 .u-section-2 .u-text-3 {
-  margin: 15px 57px 0 -57px;
+  font-weight: 700;
+  margin: 0 50px 0 -50px;
 }
 
 .u-section-2 .u-image-1 {
-  width: 1058px;
-  height: 440px;
-  margin: 0 auto;
+  width: 876px;
+  height: 464px;
+  margin: -32px auto 0 82px;
+}
+
+.u-section-2 .u-text-4 {
+  margin: 0 0 0 41px;
 }
 
 .u-section-2 .u-icon-1 {
   width: 30px;
   height: 30px;
-  margin: 30px auto 0 0;
+  margin: -63px auto 58px 0;
   padding: 0;
 }
 
-.u-section-2 .u-text-4 {
-  margin: -31px 0 41px 41px;
-}
-
 @media (max-width: 1199px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 767px;
-  }
-
   .u-section-2 .u-text-3 {
     margin-right: 0;
     margin-left: 0;
   }
 
   .u-section-2 .u-image-1 {
-    width: 940px;
-    height: 391px;
-  }
-
-  .u-section-2 .u-icon-1 {
-    margin-top: -285px;
+    margin-left: 64px;
   }
 
   .u-section-2 .u-text-4 {
@@ -127,47 +119,48 @@
 
 @media (max-width: 991px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 675px;
+    min-height: 706px;
   }
 
   .u-section-2 .u-image-1 {
     width: 720px;
-    height: 299px;
+    height: 381px;
+    margin-left: 0;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 600px;
+    min-height: 611px;
   }
 
   .u-section-2 .u-image-1 {
     width: 540px;
-    height: 224px;
+    height: 286px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 517px;
+    min-height: 505px;
   }
 
   .u-section-2 .u-image-1 {
     width: 340px;
-    height: 141px;
+    height: 180px;
   }
 }.u-section-3 .u-sheet-1 {
-  min-height: 249px;
+  min-height: 313px;
 }
 
 .u-section-3 .u-text-1 {
-  margin: 14px auto 0 0;
+  margin: 26px auto 0 0;
 }
 
 .u-section-3 .u-text-2 {
   font-size: 1rem;
   line-height: 3;
-  margin: 0 auto 0 0;
+  margin: 26px auto 26px 0;
 }
 
 .u-section-3 .u-btn-1 {
@@ -186,24 +179,18 @@
   background-image: none;
   font-size: 1rem;
   padding: 0;
-}
-
-@media (max-width: 767px) {
-  .u-section-3 .u-text-2 {
-    margin-bottom: 60px;
-  }
 }.u-section-4 .u-sheet-1 {
-  min-height: 461px;
+  min-height: 501px;
 }
 
 .u-section-4 .u-text-1 {
-  margin: 33px auto 0 0;
+  margin: 25px auto 0 0;
 }
 
 .u-section-4 .u-text-2 {
   font-size: 1rem;
   line-height: 2;
-  margin: 0 0 60px;
+  margin: 25px 0;
 }
 
 @media (max-width: 575px) {
@@ -211,43 +198,47 @@
     min-height: 455px;
   }
 }.u-section-5 .u-sheet-1 {
-  min-height: 374px;
+  min-height: 388px;
 }
 
 .u-section-5 .u-text-1 {
-  margin: 21px auto 0 0;
+  margin: 25px auto 0 0;
 }
 
 .u-section-5 .u-text-2 {
   font-size: 1rem;
   line-height: 2.5;
-  margin: 0 auto 0 0;
+  margin: 25px auto 0 0;
 }
 
 .u-section-5 .u-text-3 {
   font-size: 1rem;
   line-height: 2.5;
-  margin: 11px auto 21px 0;
+  margin: -10px auto 25px 0;
 }.u-section-6 .u-sheet-1 {
-  min-height: 484px;
+  min-height: 748px;
 }
 
 .u-section-6 .u-text-1 {
-  margin: 46px auto 0 0;
+  margin: 25px auto 0 0;
 }
 
 .u-section-6 .u-text-2 {
   font-size: 1rem;
   line-height: 1.8;
-  margin: 1px 0 0;
+  margin: 25px 0 0;
+}
+
+.u-section-6 .u-text-3 {
+  margin: 22px 0 0;
 }
 
 .u-section-6 .u-table-1 {
-  margin-top: 31px;
+  margin-top: 0;
   margin-bottom: 0;
 }
 
-.u-block-b244-16 {
+.u-block-b3c8-16 {
   height: 46px;
 }
 
@@ -299,14 +290,14 @@
   background-image: none;
 }
 
-.u-block-b244-43 {
+.u-block-b3c8-43 {
   height: 46px;
 }
 
 .u-section-6 .u-icon-1 {
   width: 30px;
   height: 30px;
-  margin: -131px 480px 0 auto;
+  margin: -129px 480px 0 auto;
   padding: 0;
 }
 
@@ -327,28 +318,28 @@
 .u-section-6 .u-icon-4 {
   width: 30px;
   height: 30px;
-  margin: -120px 269px 0 auto;
+  margin: -121px 281px 0 auto;
   padding: 0;
 }
 
 .u-section-6 .u-icon-5 {
   width: 30px;
   height: 30px;
-  margin: 61px 269px 0 auto;
+  margin: 61px 281px 0 auto;
   padding: 0;
 }
 
 .u-section-6 .u-icon-6 {
   width: 30px;
   height: 30px;
-  margin: -75px 269px 0 auto;
+  margin: -75px 281px 0 auto;
   padding: 0;
 }
 
 .u-section-6 .u-icon-7 {
   width: 30px;
   height: 30px;
-  margin: -75px 88px 0 auto;
+  margin: -76px 88px 0 auto;
   padding: 0;
 }
 
@@ -366,10 +357,158 @@
   padding: 0;
 }
 
-.u-section-6 .u-text-3 {
+.u-section-6 .u-text-4 {
+  margin: 99px 0 0;
+}
+
+.u-section-6 .u-table-2 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-block-b3c8-81 {
+  height: 46px;
+}
+
+.u-section-6 .u-table-cell-25 {
+  background-image: none;
+}
+
+.u-section-6 .u-table-cell-26 {
+  background-image: none;
+}
+
+.u-section-6 .u-table-cell-27 {
+  background-image: none;
+}
+
+.u-section-6 .u-table-cell-28 {
+  background-image: none;
+}
+
+.u-section-6 .u-table-cell-29 {
+  background-image: none;
+}
+
+.u-section-6 .u-table-cell-30 {
+  background-image: none;
+}
+
+.u-section-6 .u-table-cell-37 {
+  background-image: none;
+}
+
+.u-section-6 .u-table-cell-38 {
+  background-image: none;
+}
+
+.u-section-6 .u-table-cell-39 {
+  background-image: none;
+}
+
+.u-section-6 .u-table-cell-40 {
+  background-image: none;
+}
+
+.u-section-6 .u-table-cell-41 {
+  background-image: none;
+}
+
+.u-section-6 .u-table-cell-42 {
+  background-image: none;
+}
+
+.u-block-b3c8-114 {
+  height: 46px;
+}
+
+.u-section-6 .u-group-elements-1 {
+  width: 422px;
+  min-height: 122px;
+  margin: -128px 88px 0 auto;
+}
+
+.u-section-6 .u-group-elements-2 {
+  min-height: 122px;
+  height: auto;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-6 .u-icon-10 {
+  width: 30px;
+  height: 30px;
+  margin: 1px 392px 0 0;
+  padding: 0;
+}
+
+.u-section-6 .u-icon-11 {
+  width: 30px;
+  height: 30px;
+  margin: 16px 392px 0 0;
+  padding: 0;
+}
+
+.u-section-6 .u-icon-12 {
+  width: 30px;
+  height: 30px;
+  margin: -76px 193px 0 auto;
+  padding: 0;
+}
+
+.u-section-6 .u-icon-13 {
+  width: 30px;
+  height: 30px;
+  margin: -31px 0 0 auto;
+  padding: 0;
+}
+
+.u-section-6 .u-icon-14 {
+  width: 30px;
+  height: 30px;
+  margin: 62px 392px 0 0;
+  padding: 0;
+}
+
+.u-section-6 .u-group-elements-3 {
+  width: 223px;
+  min-height: 75px;
+  height: auto;
+  margin: -75px 0 0 auto;
+}
+
+.u-section-6 .u-icon-15 {
+  width: 30px;
+  height: 30px;
+  margin: 45px 0 0 auto;
+  padding: 0;
+}
+
+.u-section-6 .u-icon-16 {
+  width: 30px;
+  height: 30px;
+  margin: -75px 193px 0 0;
+  padding: 0;
+}
+
+.u-section-6 .u-icon-17 {
+  width: 30px;
+  height: 30px;
+  margin: 15px 193px 0 0;
+  padding: 0;
+}
+
+.u-section-6 .u-icon-18 {
+  width: 30px;
+  height: 30px;
+  margin: -76px 88px 0 auto;
+  padding: 0;
+}
+
+.u-section-6 .u-text-5 {
   font-size: 1rem;
   line-height: 1.8;
-  margin: 76px 0 46px;
+  margin: 74px 0 25px;
 }
 
 @media (max-width: 1199px) {
@@ -378,23 +517,16 @@
   }
 
   .u-section-6 .u-icon-2 {
-    margin-top: 31px;
     margin-right: 396px;
   }
 
   .u-section-6 .u-icon-3 {
-    margin-top: 20px;
     margin-right: 396px;
-  }
-
-  .u-section-6 .u-icon-7 {
-    margin-top: -76px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-6 .u-icon-1 {
-    margin-top: -97px;
     margin-right: 303px;
   }
 
@@ -407,26 +539,20 @@
   }
 
   .u-section-6 .u-icon-4 {
-    margin-right: 206px;
+    margin-right: 215px;
   }
 
   .u-section-6 .u-icon-5 {
-    margin-right: 206px;
+    margin-right: 215px;
   }
 
   .u-section-6 .u-icon-6 {
-    margin-right: 206px;
-  }
-
-  .u-section-6 .u-text-3 {
-    margin-top: 20px;
-    margin-bottom: 0;
+    margin-right: 215px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-6 .u-icon-1 {
-    margin-top: -69px;
     margin-right: 227px;
   }
 
@@ -439,25 +565,20 @@
   }
 
   .u-section-6 .u-icon-4 {
-    margin-right: 155px;
+    margin-right: 161px;
   }
 
   .u-section-6 .u-icon-5 {
-    margin-right: 155px;
+    margin-right: 161px;
   }
 
   .u-section-6 .u-icon-6 {
-    margin-right: 155px;
-  }
-
-  .u-section-6 .u-text-3 {
-    margin-top: -8px;
+    margin-right: 161px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-6 .u-icon-1 {
-    margin-top: -13px;
     margin-right: 143px;
   }
 
@@ -470,587 +591,60 @@
   }
 
   .u-section-6 .u-icon-4 {
-    margin-right: 98px;
+    margin-right: 101px;
   }
 
   .u-section-6 .u-icon-5 {
-    margin-right: 98px;
+    margin-right: 101px;
   }
 
   .u-section-6 .u-icon-6 {
-    margin-right: 98px;
+    margin-right: 101px;
   }
 
-  .u-section-6 .u-text-3 {
-    margin-top: -64px;
+  .u-section-6 .u-group-elements-1 {
+    width: 340px;
+    margin-right: 0;
+  }
+
+  .u-section-6 .u-icon-18 {
+    margin-right: 0;
   }
 }.u-section-7 .u-sheet-1 {
-  min-height: 622px;
+  min-height: 654px;
 }
 
 .u-section-7 .u-text-1 {
   font-weight: normal;
-  margin: 29px auto 0 0;
+  margin: 27px auto 0 0;
 }
 
-.u-section-7 .u-table-1 {
-  width: 1068px;
-  margin: 24px 0 0 auto;
-}
-
-.u-block-1364-86 {
-  height: 46px;
-}
-
-.u-section-7 .u-table-cell-1 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-2 {
-  background-image: none;
-}
-
-.u-block-1364-101 {
-  height: 46px;
-}
-
-.u-section-7 .u-table-2 {
-  margin-top: 0;
-  margin-bottom: 0;
-  width: 1141px;
-}
-
-.u-block-1364-11 {
-  height: 46px;
-}
-
-.u-section-7 .u-table-cell-3 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-13 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-23 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-33 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-43 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-53 {
-  background-image: none;
-}
-
-.u-block-1364-26 {
-  height: 46px;
-}
-
-.u-section-7 .u-icon-1 {
-  width: 30px;
-  height: 30px;
-  margin: -176px 522px 0 auto;
-  padding: 0;
-}
-
-.u-section-7 .u-icon-2 {
-  width: 30px;
-  height: 30px;
-  margin: -30px auto 0 117px;
-  padding: 0;
-}
-
-.u-section-7 .u-icon-3 {
-  width: 30px;
-  height: 30px;
-  margin: 16px auto 0 117px;
-  padding: 0;
-}
-
-.u-section-7 .u-icon-4 {
-  width: 30px;
-  height: 30px;
-  margin: 16px auto 0 117px;
-  padding: 0;
-}
-
-.u-section-7 .u-icon-5 {
-  width: 30px;
-  height: 30px;
-  margin: 16px auto 0 469px;
-  padding: 0;
-}
-
-.u-section-7 .u-icon-6 {
-  width: 30px;
-  height: 30px;
-  margin: -76px auto 0 348px;
-  padding: 0;
-}
-
-.u-section-7 .u-icon-7 {
-  width: 30px;
-  height: 30px;
-  margin: 16px auto 0 117px;
-  padding: 0;
-}
-
-.u-section-7 .u-icon-8 {
-  width: 30px;
-  height: 30px;
-  margin: -122px 522px 0 auto;
-  padding: 0;
-}
-
-.u-section-7 .u-icon-9 {
-  width: 30px;
-  height: 30px;
-  margin: 16px 522px 0 auto;
-  padding: 0;
-}
-
-.u-section-7 .u-icon-10 {
-  width: 30px;
-  height: 30px;
-  margin: 16px 522px 0 auto;
-  padding: 0;
-}
-
-.u-section-7 .u-icon-11 {
-  width: 30px;
-  height: 30px;
-  margin: -122px auto 0 228px;
-  padding: 0;
-}
-
-.u-section-7 .u-icon-12 {
-  width: 30px;
-  height: 30px;
-  margin: 16px auto 0 228px;
-  padding: 0;
-}
-
-.u-section-7 .u-icon-13 {
-  width: 30px;
-  height: 30px;
-  margin: 16px auto 0 228px;
-  padding: 0;
-}
-
-.u-section-7 .u-icon-14 {
-  width: 30px;
-  height: 30px;
-  margin: -168px 404px 0 auto;
-  padding: 0;
-}
-
-.u-section-7 .u-icon-15 {
-  width: 30px;
-  height: 30px;
-  margin: 16px 404px 0 auto;
-  padding: 0;
-}
-
-.u-section-7 .u-icon-16 {
-  width: 30px;
-  height: 30px;
-  margin: 16px 404px 0 auto;
-  padding: 0;
-}
-
-.u-section-7 .u-icon-17 {
-  width: 30px;
-  height: 30px;
-  margin: -169px 522px 0 auto;
-  padding: 0;
-}
-
-.u-section-7 .u-icon-18 {
-  width: 30px;
-  height: 30px;
-  margin: 156px 404px 0 auto;
-  padding: 0;
-}
-
-.u-section-7 .u-icon-19 {
-  width: 30px;
-  height: 30px;
-  margin: -122px 284px 0 auto;
-  padding: 0;
-}
-
-.u-section-7 .u-icon-20 {
-  width: 30px;
-  height: 30px;
-  margin: 16px 284px 0 auto;
-  padding: 0;
-}
-
-.u-section-7 .u-icon-21 {
-  width: 30px;
-  height: 30px;
-  margin: 16px 284px 0 auto;
-  padding: 0;
-}
-
-.u-section-7 .u-icon-22 {
-  width: 30px;
-  height: 30px;
-  margin: -30px auto 0 1065px;
-  padding: 0;
-}
-
-.u-section-7 .u-icon-23 {
-  width: 30px;
-  height: 30px;
-  margin: -76px auto 60px 944px;
-  padding: 0;
-}
-
-@media (max-width: 1199px) {
-  .u-section-7 .u-table-1 {
-    width: 940px;
-    margin-top: -297px;
-  }
-
-  .u-section-7 .u-table-2 {
-    margin-top: 616px;
-    width: 940px;
-  }
-
-  .u-section-7 .u-icon-1 {
-    margin-right: 430px;
-  }
-
-  .u-section-7 .u-icon-5 {
-    margin-left: 387px;
-  }
-
-  .u-section-7 .u-icon-6 {
-    margin-left: 287px;
-  }
-
-  .u-section-7 .u-icon-8 {
-    margin-right: 430px;
-  }
-
-  .u-section-7 .u-icon-9 {
-    margin-right: 430px;
-  }
-
-  .u-section-7 .u-icon-10 {
-    margin-right: 430px;
-  }
-
-  .u-section-7 .u-icon-14 {
-    margin-right: 333px;
-  }
-
-  .u-section-7 .u-icon-15 {
-    margin-right: 333px;
-  }
-
-  .u-section-7 .u-icon-16 {
-    margin-right: 333px;
-  }
-
-  .u-section-7 .u-icon-17 {
-    margin-right: 430px;
-  }
-
-  .u-section-7 .u-icon-18 {
-    margin-right: 333px;
-  }
-
-  .u-section-7 .u-icon-22 {
-    margin-left: 878px;
-  }
-
-  .u-section-7 .u-icon-23 {
-    margin-left: 778px;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-7 .u-table-1 {
-    width: 720px;
-    margin-top: -188px;
-  }
-
-  .u-section-7 .u-table-2 {
-    margin-top: 507px;
-    width: 720px;
-  }
-
-  .u-section-7 .u-icon-1 {
-    margin-right: 329px;
-  }
-
-  .u-section-7 .u-icon-5 {
-    margin-left: 296px;
-  }
-
-  .u-section-7 .u-icon-6 {
-    margin-left: 220px;
-  }
-
-  .u-section-7 .u-icon-8 {
-    margin-right: 329px;
-  }
-
-  .u-section-7 .u-icon-9 {
-    margin-right: 329px;
-  }
-
-  .u-section-7 .u-icon-10 {
-    margin-right: 329px;
-  }
-
-  .u-section-7 .u-icon-14 {
-    margin-right: 255px;
-  }
-
-  .u-section-7 .u-icon-15 {
-    margin-right: 255px;
-  }
-
-  .u-section-7 .u-icon-16 {
-    margin-right: 255px;
-  }
-
-  .u-section-7 .u-icon-17 {
-    margin-right: 329px;
-  }
-
-  .u-section-7 .u-icon-18 {
-    margin-right: 255px;
-  }
-
-  .u-section-7 .u-icon-19 {
-    margin-right: 218px;
-  }
-
-  .u-section-7 .u-icon-20 {
-    margin-right: 218px;
-  }
-
-  .u-section-7 .u-icon-21 {
-    margin-right: 218px;
-  }
-
-  .u-section-7 .u-icon-22 {
-    margin-left: 673px;
-  }
-
-  .u-section-7 .u-icon-23 {
-    margin-left: 596px;
-  }
+.u-section-7 .u-image-1 {
+  height: 530px;
+  margin-top: 27px;
+  margin-bottom: 27px;
 }
 
 @media (max-width: 767px) {
-  .u-section-7 .u-table-1 {
-    width: 540px;
-    margin-top: -129px;
-  }
-
-  .u-section-7 .u-table-2 {
-    margin-top: 448px;
-    width: 540px;
-  }
-
-  .u-section-7 .u-icon-1 {
-    margin-right: 247px;
-  }
-
-  .u-section-7 .u-icon-5 {
-    margin-left: 222px;
-  }
-
-  .u-section-7 .u-icon-6 {
-    margin-left: 165px;
-  }
-
-  .u-section-7 .u-icon-8 {
-    margin-right: 247px;
-  }
-
-  .u-section-7 .u-icon-9 {
-    margin-right: 247px;
-  }
-
-  .u-section-7 .u-icon-10 {
-    margin-right: 247px;
-  }
-
-  .u-section-7 .u-icon-11 {
-    margin-left: 171px;
-  }
-
-  .u-section-7 .u-icon-12 {
-    margin-left: 171px;
-  }
-
-  .u-section-7 .u-icon-13 {
-    margin-left: 171px;
-  }
-
-  .u-section-7 .u-icon-14 {
-    margin-right: 191px;
-  }
-
-  .u-section-7 .u-icon-15 {
-    margin-right: 191px;
-  }
-
-  .u-section-7 .u-icon-16 {
-    margin-right: 191px;
-  }
-
-  .u-section-7 .u-icon-17 {
-    margin-right: 247px;
-  }
-
-  .u-section-7 .u-icon-18 {
-    margin-right: 191px;
-  }
-
-  .u-section-7 .u-icon-19 {
-    margin-right: 164px;
-  }
-
-  .u-section-7 .u-icon-20 {
-    margin-right: 164px;
-  }
-
-  .u-section-7 .u-icon-21 {
-    margin-right: 164px;
-  }
-
-  .u-section-7 .u-icon-22 {
-    margin-left: 505px;
-  }
-
-  .u-section-7 .u-icon-23 {
-    margin-left: 447px;
+  .u-section-7 .u-sheet-1 {
+    min-height: 708px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-7 .u-table-1 {
-    width: 340px;
-  }
-
-  .u-section-7 .u-table-2 {
-    width: 340px;
-  }
-
-  .u-section-7 .u-icon-1 {
-    margin-right: 156px;
-  }
-
-  .u-section-7 .u-icon-2 {
-    margin-left: 74px;
-  }
-
-  .u-section-7 .u-icon-3 {
-    margin-left: 74px;
-  }
-
-  .u-section-7 .u-icon-4 {
-    margin-left: 74px;
-  }
-
-  .u-section-7 .u-icon-5 {
-    margin-left: 140px;
-  }
-
-  .u-section-7 .u-icon-6 {
-    margin-left: 104px;
-  }
-
-  .u-section-7 .u-icon-7 {
-    margin-left: 74px;
-  }
-
-  .u-section-7 .u-icon-8 {
-    margin-right: 156px;
-  }
-
-  .u-section-7 .u-icon-9 {
-    margin-right: 156px;
-  }
-
-  .u-section-7 .u-icon-10 {
-    margin-right: 156px;
-  }
-
-  .u-section-7 .u-icon-11 {
-    margin-left: 108px;
-  }
-
-  .u-section-7 .u-icon-12 {
-    margin-left: 108px;
-  }
-
-  .u-section-7 .u-icon-13 {
-    margin-left: 108px;
-  }
-
-  .u-section-7 .u-icon-14 {
-    margin-right: 120px;
-  }
-
-  .u-section-7 .u-icon-15 {
-    margin-right: 120px;
-  }
-
-  .u-section-7 .u-icon-16 {
-    margin-right: 120px;
-  }
-
-  .u-section-7 .u-icon-17 {
-    margin-right: 156px;
-  }
-
-  .u-section-7 .u-icon-18 {
-    margin-right: 120px;
-  }
-
-  .u-section-7 .u-icon-19 {
-    margin-right: 103px;
-  }
-
-  .u-section-7 .u-icon-20 {
-    margin-right: 103px;
-  }
-
-  .u-section-7 .u-icon-21 {
-    margin-right: 103px;
-  }
-
-  .u-section-7 .u-icon-22 {
-    margin-left: 318px;
-  }
-
-  .u-section-7 .u-icon-23 {
-    margin-left: 281px;
+  .u-section-7 .u-sheet-1 {
+    min-height: 531px;
   }
 }.u-section-8 .u-sheet-1 {
-  min-height: 1637px;
+  min-height: 1428px;
 }
 
 .u-section-8 .u-text-1 {
-  margin: 46px auto 0 0;
+  margin: 32px auto 0 0;
 }
 
 .u-section-8 .u-accordion-1 {
-  margin-top: 24px;
+  margin-top: 20px;
   margin-bottom: 0;
 }
 
@@ -1207,13 +801,13 @@
 }
 
 .u-section-8 .u-text-10 {
-  margin: 95px auto 0 0;
+  margin: 60px auto 0 0;
 }
 
 .u-section-8 .u-text-11 {
   font-size: 1rem;
   line-height: 2;
-  margin: 20px 0 36px;
+  margin: 25px 0;
 }
 
 @media (max-width: 991px) {
