--- a/Task1-Cine-reconstruction.css
+++ b/Task1-Cine-reconstruction.css
@@ -1,21 +1,21 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 506px;
+  min-height: 482px;
 }
 
 .u-section-1 .u-text-1 {
   font-weight: 400;
-  margin: 40px auto 0 0;
+  margin: 29px auto 0 0;
 }
 
 .u-section-1 .u-image-1 {
   width: 1030px;
   height: 352px;
-  margin: 30px auto 41px;
+  margin: 29px auto;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 475px;
+    min-height: 451px;
   }
 
   .u-section-1 .u-image-1 {
@@ -26,7 +26,7 @@
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 400px;
+    min-height: 376px;
   }
 
   .u-section-1 .u-image-1 {
@@ -37,7 +37,7 @@
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 339px;
+    min-height: 315px;
   }
 
   .u-section-1 .u-image-1 {
@@ -48,7 +48,7 @@
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 270px;
+    min-height: 246px;
   }
 
   .u-section-1 .u-image-1 {
@@ -56,17 +56,17 @@
     height: 116px;
   }
 }.u-section-2 .u-sheet-1 {
-  min-height: 335px;
+  min-height: 342px;
 }
 
 .u-section-2 .u-text-1 {
   font-weight: 400;
-  margin: 35px auto 0 0;
+  margin: 25px auto 0 0;
 }
 
 .u-section-2 .u-text-2 {
   font-size: 1rem;
-  margin: 0 0 35px;
+  margin: 25px 0;
 }
 
 @media (max-width: 1199px) {
@@ -80,17 +80,17 @@
     min-height: 570px;
   }
 }.u-section-3 .u-sheet-1 {
-  min-height: 2419px;
+  min-height: 2519px;
 }
 
 .u-section-3 .u-text-1 {
   font-weight: 400;
-  margin: 20px auto 0 0;
+  margin: 26px auto 0 0;
 }
 
 .u-section-3 .u-text-2 {
   font-size: 1rem;
-  margin: 0 0 20px;
+  margin: 24px 0 26px;
 }
 
 .u-section-3 .u-btn-1 {
@@ -108,28 +108,29 @@
 }
 
 .u-section-4 .u-sheet-1 {
-  min-height: 525px;
+  min-height: 507px;
 }
 
 .u-section-4 .u-text-1 {
   font-weight: 400;
-  margin: 40px auto 0 0;
+  margin: 25px auto 0 0;
 }
 
 .u-section-4 .u-text-2 {
   font-size: 1rem;
   line-height: 1.8;
-  margin: 0;
+  margin: 25px 0 0;
 }
 
 .u-section-4 .u-text-3 {
   font-size: 1rem;
-  margin: 19px auto 0;
+  font-weight: 700;
+  margin: 26px auto 0;
 }
 
 .u-section-4 .u-table-1 {
   width: 544px;
-  margin: 17px auto 50px;
+  margin: 0 auto 25px;
 }
 
 .u-block-3ff8-12 {
@@ -138,10 +139,12 @@
 
 .u-section-4 .u-table-cell-1 {
   background-image: none;
+  font-weight: 700;
 }
 
 .u-section-4 .u-table-cell-2 {
   background-image: none;
+  font-weight: 700;
 }
 
 .u-section-4 .u-table-cell-5 {
@@ -175,27 +178,27 @@
     width: 340px;
   }
 }.u-section-5 .u-sheet-1 {
-  min-height: 407px;
+  min-height: 423px;
 }
 
 .u-section-5 .u-text-1 {
-  margin: 13px auto 0 0;
+  margin: 23px auto 0 0;
 }
 
 .u-section-5 .u-text-2 {
   font-size: 1rem;
   line-height: 1.8;
-  margin: 0;
+  margin: 23px 0 0;
 }
 
 .u-section-5 .u-text-3 {
-  margin: 53px auto 0 0;
+  margin: 49px auto 0 0;
 }
 
 .u-section-5 .u-text-4 {
   font-size: 1rem;
   line-height: 1.8;
-  margin: 0 0 31px;
+  margin: 23px 0;
 }
 
 .u-section-5 .u-btn-1 {
