--- a/Validation.css
+++ b/Validation.css
@@ -1,5 +1,5 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 460px;
+  min-height: 450px;
 }
 
 .u-section-1 .u-image-1 {
@@ -42,72 +42,72 @@
     margin-top: -313px;
   }
 }.u-section-2 .u-sheet-1 {
-  min-height: 322px;
+  min-height: 150px;
 }
 
 .u-section-2 .u-text-1 {
-  font-size: 1rem;
-  margin: 35px auto 0 0;
+  font-size: 1.5rem;
+  margin: 27px 0;
 }
 
-.u-section-2 .u-image-1 {
+.u-section-2 .u-btn-1 {
+  background-image: none;
+  font-size: 1.25rem;
+  padding: 0;
+}.u-section-3 .u-sheet-1 {
+  min-height: 288px;
+}
+
+.u-section-3 .u-text-1 {
+  font-size: 1rem;
+  margin: 32px auto 0 0;
+}
+
+.u-section-3 .u-image-1 {
   width: 450px;
   height: 112px;
-  margin: 42px auto 0 3px;
+  margin: 24px auto 0 10px;
 }
 
-.u-section-2 .u-text-2 {
+.u-section-3 .u-text-2 {
   font-size: 1rem;
-  margin: 20px auto 49px 0;
+  margin: 24px auto 32px 0;
 }
 
 @media (max-width: 575px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 295px;
+  .u-section-3 .u-sheet-1 {
+    min-height: 261px;
   }
 
-  .u-section-2 .u-image-1 {
+  .u-section-3 .u-image-1 {
     width: 340px;
     height: 85px;
     margin-left: 0;
   }
-}.u-section-3 .u-sheet-1 {
+}.u-section-4 .u-sheet-1 {
   min-height: 2177px;
 }
 
-.u-section-3 .u-image-1 {
+.u-section-4 .u-image-1 {
   width: 762px;
-}.u-section-4 .u-sheet-1 {
-  min-height: 149px;
-}
-
-.u-section-4 .u-text-1 {
-  font-size: 1.5rem;
-  margin: 21px 0 32px;
-}
-
-.u-section-4 .u-btn-1 {
-  background-image: none;
-  font-size: 1.25rem;
-  padding: 0;
 }.u-section-5 .u-sheet-1 {
-  min-height: 413px;
+  min-height: 409px;
 }
 
 .u-section-5 .u-text-1 {
-  margin: 21px 729px 0 0;
+  margin: 24px 729px 0 0;
 }
 
 .u-section-5 .u-text-2 {
   font-size: 1rem;
   line-height: 2;
-  margin: 0;
+  margin: 25px 0 0;
 }
 
 .u-section-5 .u-text-3 {
   line-height: 2;
   font-size: 1rem;
-  margin: 0 0 57px;
+  margin: 0 0 25px;
 }
 
 .u-section-5 .u-btn-1 {
@@ -152,17 +152,17 @@
 }
 
 .u-section-6 .u-text-1 {
-  margin: 32px auto 0 0;
+  margin: 26px auto 0 0;
 }
 
 .u-section-6 .u-text-2 {
   font-size: 1rem;
-  margin: 0 auto 0 0;
+  margin: 26px auto 0 0;
 }
 
 .u-section-6 .u-image-1 {
   height: 243px;
-  margin-top: 20px;
+  margin-top: 0;
   margin-bottom: 0;
 }
 
@@ -248,17 +248,17 @@
     margin-top: -264px;
   }
 }.u-section-7 .u-sheet-1 {
-  min-height: 701px;
+  min-height: 625px;
 }
 
 .u-section-7 .u-text-1 {
-  margin: 52px auto 0 0;
+  margin: 25px auto 0 0;
 }
 
 .u-section-7 .u-text-2 {
   font-size: 1rem;
   line-height: 3;
-  margin: 0 auto 0 0;
+  margin: 25px auto 0 0;
 }
 
 .u-section-7 .u-text-3 {
@@ -270,7 +270,7 @@
 .u-section-7 .u-text-4 {
   font-size: 1rem;
   line-height: 3;
-  margin: -9px auto 0 0;
+  margin: -17px auto 0 0;
 }
 
 .u-section-7 .u-image-1 {
@@ -288,7 +288,7 @@
 .u-section-7 .u-image-2 {
   height: 51px;
   margin-top: 0;
-  margin-bottom: 60px;
+  margin-bottom: 30px;
 }
 
 @media (max-width: 1199px) {
