--- a/STACOM.css
+++ b/STACOM.css
@@ -42,167 +42,172 @@
     margin-top: -313px;
   }
 }.u-section-2 .u-sheet-1 {
-  min-height: 150px;
+  min-height: 410px;
 }
 
 .u-section-2 .u-text-1 {
+  font-size: 1rem;
+  margin: 27px auto 0 0;
+}
+
+.u-section-2 .u-image-1 {
+  width: 450px;
+  height: 112px;
+  margin: 27px auto 0 27px;
+}
+
+.u-section-2 .u-text-2 {
   font-size: 1.5rem;
-  margin: 27px 0;
+  margin: 32px 14px 0 -14px;
 }
 
 .u-section-2 .u-btn-1 {
   background-image: none;
   font-size: 1.25rem;
   padding: 0;
-}.u-section-3 .u-sheet-1 {
-  min-height: 288px;
 }
 
-.u-section-3 .u-text-1 {
+.u-section-2 .u-text-3 {
   font-size: 1rem;
-  margin: 32px auto 0 0;
+  margin: 20px auto 32px 0;
 }
 
-.u-section-3 .u-image-1 {
-  width: 450px;
-  height: 112px;
-  margin: 24px auto 0 10px;
-}
-
-.u-section-3 .u-text-2 {
-  font-size: 1rem;
-  margin: 24px auto 32px 0;
+@media (max-width: 1199px) {
+  .u-section-2 .u-text-2 {
+    margin-right: 0;
+    margin-left: 0;
+  }
 }
 
 @media (max-width: 575px) {
-  .u-section-3 .u-sheet-1 {
-    min-height: 261px;
+  .u-section-2 .u-sheet-1 {
+    min-height: 383px;
   }
 
-  .u-section-3 .u-image-1 {
+  .u-section-2 .u-image-1 {
     width: 340px;
     height: 85px;
     margin-left: 0;
   }
-}.u-section-4 .u-sheet-1 {
+}.u-section-3 .u-sheet-1 {
   min-height: 2177px;
 }
 
-.u-section-4 .u-image-1 {
+.u-section-3 .u-image-1 {
   width: 762px;
-}.u-section-5 .u-sheet-1 {
+}.u-section-4 .u-sheet-1 {
   min-height: 409px;
 }
 
-.u-section-5 .u-text-1 {
+.u-section-4 .u-text-1 {
   margin: 24px 729px 0 0;
 }
 
-.u-section-5 .u-text-2 {
+.u-section-4 .u-text-2 {
   font-size: 1rem;
-  line-height: 2;
+  line-height: 3;
   margin: 25px 0 0;
 }
 
-.u-section-5 .u-text-3 {
-  line-height: 2;
+.u-section-4 .u-text-3 {
+  line-height: 3;
   font-size: 1rem;
   margin: 0 0 25px;
 }
 
-.u-section-5 .u-btn-1 {
+.u-section-4 .u-btn-1 {
   font-size: 1rem;
   padding: 0;
 }
 
-.u-section-5 .u-btn-2 {
+.u-section-4 .u-btn-2 {
   background-image: none;
   font-size: 1rem;
   padding: 0;
 }
 
 @media (max-width: 1199px) {
-  .u-section-5 .u-text-1 {
+  .u-section-4 .u-text-1 {
     margin-right: 529px;
   }
 
-  .u-section-5 .u-btn-1 {
+  .u-section-4 .u-btn-1 {
     border-style: solid;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-5 .u-text-1 {
+  .u-section-4 .u-text-1 {
     margin-right: 309px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-5 .u-text-1 {
+  .u-section-4 .u-text-1 {
     margin-right: 129px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-5 .u-text-1 {
+  .u-section-4 .u-text-1 {
     margin-right: 0;
   }
-}.u-section-6 .u-sheet-1 {
+}.u-section-5 .u-sheet-1 {
   min-height: 1078px;
 }
 
-.u-section-6 .u-text-1 {
+.u-section-5 .u-text-1 {
   margin: 26px auto 0 0;
 }
 
-.u-section-6 .u-text-2 {
+.u-section-5 .u-text-2 {
   font-size: 1rem;
   margin: 26px auto 0 0;
 }
 
-.u-section-6 .u-image-1 {
+.u-section-5 .u-image-1 {
   height: 243px;
   margin-top: 0;
   margin-bottom: 0;
 }
 
-.u-section-6 .u-text-3 {
+.u-section-5 .u-text-3 {
   font-size: 1rem;
   line-height: 3;
   margin: 31px auto 0 0;
 }
 
-.u-section-6 .u-image-2 {
+.u-section-5 .u-image-2 {
   width: 570px;
   height: 42px;
   margin: -96px auto 0 0;
 }
 
-.u-section-6 .u-image-3 {
+.u-section-5 .u-image-3 {
   width: 312px;
   height: 472px;
   margin: -281px 20px 0 auto;
 }
 
-.u-section-6 .u-text-4 {
+.u-section-5 .u-text-4 {
   font-size: 1rem;
   line-height: 3;
   margin: -124px auto 0 0;
 }
 
-.u-section-6 .u-text-5 {
+.u-section-5 .u-text-5 {
   font-size: 1rem;
   line-height: 3;
   margin: 20px auto 0 0;
 }
 
-.u-section-6 .u-btn-1 {
+.u-section-5 .u-btn-1 {
   background-image: none;
   font-size: 1rem;
   padding: 0;
 }
 
-.u-section-6 .u-icon-1 {
+.u-section-5 .u-icon-1 {
   width: 30px;
   height: 30px;
   margin: -184px auto 154px 0;
@@ -210,111 +215,115 @@
 }
 
 @media (max-width: 1199px) {
-  .u-section-6 .u-text-4 {
+  .u-section-5 .u-text-4 {
     margin-top: -125px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-6 .u-sheet-1 {
+  .u-section-5 .u-sheet-1 {
     min-height: 1076px;
   }
 
-  .u-section-6 .u-image-1 {
+  .u-section-5 .u-image-1 {
     margin-top: 23px;
   }
 
-  .u-section-6 .u-image-2 {
+  .u-section-5 .u-image-2 {
     width: 540px;
     height: 40px;
   }
 
-  .u-section-6 .u-image-3 {
+  .u-section-5 .u-image-3 {
     margin-top: -279px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-6 .u-sheet-1 {
+  .u-section-5 .u-sheet-1 {
     min-height: 1061px;
   }
 
-  .u-section-6 .u-image-2 {
+  .u-section-5 .u-image-2 {
     width: 340px;
     height: 25px;
   }
 
-  .u-section-6 .u-image-3 {
+  .u-section-5 .u-image-3 {
     margin-top: -264px;
   }
-}.u-section-7 .u-sheet-1 {
+}.u-section-6 .u-sheet-1 {
   min-height: 625px;
 }
 
-.u-section-7 .u-text-1 {
+.u-section-6 .u-text-1 {
   margin: 25px auto 0 0;
 }
 
-.u-section-7 .u-text-2 {
+.u-section-6 .u-text-2 {
   font-size: 1rem;
   line-height: 3;
   margin: 25px auto 0 0;
 }
 
-.u-section-7 .u-text-3 {
+.u-section-6 .u-text-3 {
   font-size: 1rem;
   line-height: 3;
   margin: 0;
 }
 
-.u-section-7 .u-text-4 {
-  font-size: 1rem;
-  line-height: 3;
-  margin: -17px auto 0 0;
-}
-
-.u-section-7 .u-image-1 {
-  height: 25px;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.u-section-7 .u-text-5 {
+.u-section-6 .u-text-4 {
   font-size: 1rem;
   line-height: 3;
   margin: 11px auto 0 0;
 }
 
-.u-section-7 .u-image-2 {
+.u-section-6 .u-image-1 {
+  height: 25px;
+  margin-top: 8px;
+  margin-bottom: 0;
+}
+
+.u-section-6 .u-text-5 {
+  font-size: 1rem;
+  line-height: 3;
+  margin: 28px auto 0 0;
+}
+
+.u-section-6 .u-image-2 {
   height: 51px;
   margin-top: 0;
-  margin-bottom: 30px;
+  margin-bottom: 25px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-7 .u-text-4 {
+  .u-section-6 .u-text-4 {
     margin-top: -43px;
+  }
+
+  .u-section-6 .u-image-2 {
+    margin-bottom: 51px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-7 .u-text-4 {
+  .u-section-6 .u-text-4 {
     margin-top: -38px;
   }
 
-  .u-section-7 .u-image-2 {
+  .u-section-6 .u-image-2 {
     margin-bottom: 9px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-7 .u-text-4 {
+  .u-section-6 .u-text-4 {
     margin-top: -34px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-7 .u-text-4 {
+  .u-section-6 .u-text-4 {
     margin-top: -30px;
   }
 }
