--- a/Task2-T1-T2-mapping.css
+++ b/Task2-T1-T2-mapping.css
@@ -1,15 +1,47 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 573px;
+  min-height: 544px;
 }
 
 .u-section-1 .u-text-1 {
-  margin: 25px auto 0 0;
+  margin: 26px auto 0 0;
 }
 
 .u-section-1 .u-image-1 {
-  height: 455px;
-  margin-top: 25px;
-  margin-bottom: 25px;
+  width: 1104px;
+  height: 425px;
+  margin: 25px auto 26px 0;
+}
+
+@media (max-width: 1199px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 573px;
+  }
+
+  .u-section-1 .u-image-1 {
+    width: 940px;
+    height: 362px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-1 .u-image-1 {
+    width: 720px;
+    height: 277px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-1 .u-image-1 {
+    width: 540px;
+    height: 208px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-1 .u-image-1 {
+    width: 340px;
+    height: 131px;
+  }
 }.u-section-2 .u-sheet-1 {
   min-height: 374px;
 }
@@ -21,26 +53,31 @@
 .u-section-2 .u-text-2 {
   font-weight: 400;
   font-size: 1rem;
+  line-height: 3;
   margin: 25px 0;
 }.u-section-3 .u-sheet-1 {
-  min-height: 2806px;
+  min-height: 4063px;
 }
 
 .u-section-3 .u-text-1 {
   margin: 25px auto 0 0;
 }
 
-.u-section-3 .u-group-elements-1 {
-  min-height: 2688px;
-  height: auto;
-  width: 1140px;
-  margin: 26px 0 24px;
+.u-section-3 .u-text-2 {
+  margin: 25px auto 0 0;
 }
 
-.u-section-3 .u-text-2 {
+.u-section-3 .u-group-elements-1 {
+  min-height: 3888px;
+  height: auto;
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+
+.u-section-3 .u-text-3 {
   font-weight: 400;
   font-size: 1rem;
-  line-height: 2;
+  line-height: 3;
   margin: 0;
 }
 
@@ -53,43 +90,19 @@
 .u-section-3 .u-image-1 {
   width: 284px;
   height: 37px;
-  margin: -2290px auto 0 428px;
+  margin: -3390px auto 0;
 }
 
 .u-section-3 .u-image-2 {
   width: 273px;
   height: 37px;
-  margin: -170px auto 0 434px;
+  margin: -216px auto 0;
 }
 
 .u-section-3 .u-image-3 {
   width: 211px;
   height: 48px;
-  margin: 293px auto 2045px 465px;
-}
-
-@media (max-width: 1199px) {
-  .u-section-3 .u-group-elements-1 {
-    width: 940px;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-3 .u-group-elements-1 {
-    width: 720px;
-  }
-}
-
-@media (max-width: 767px) {
-  .u-section-3 .u-group-elements-1 {
-    width: 540px;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-3 .u-group-elements-1 {
-    width: 340px;
-  }
+  margin: 439px auto 0;
 }.u-section-4 .u-sheet-1 {
   min-height: 262px;
 }
@@ -120,7 +133,7 @@
 .u-section-5 .u-text-2 {
   font-weight: 400;
   font-size: 1rem;
-  line-height: 2;
+  line-height: 3;
   margin: 25px 20px 0 0;
 }
 
