--- a/Task1-Cine-reconstruction.css
+++ b/Task1-Cine-reconstruction.css
@@ -102,63 +102,75 @@
   font-size: 1rem;
   line-height: 3;
   margin: 14px 0 46px;
-} .u-section-4 {
-  background-image: none;
-}
-
-.u-section-4 .u-sheet-1 {
-  min-height: 547px;
+}.u-section-4 .u-sheet-1 {
+  min-height: 406px;
 }
 
 .u-section-4 .u-text-1 {
-  font-weight: 400;
-  margin: 25px auto 0 0;
+  margin: 23px auto 0 0;
 }
 
 .u-section-4 .u-text-2 {
   font-size: 1rem;
   line-height: 3;
+  margin: 25px 0 27px;
+} .u-section-5 {
+  background-image: none;
+}
+
+.u-section-5 .u-sheet-1 {
+  min-height: 699px;
+}
+
+.u-section-5 .u-text-1 {
+  font-weight: 400;
+  margin: 25px auto 0 0;
+}
+
+.u-section-5 .u-text-2 {
+  font-size: 1rem;
+  line-height: 3;
   margin: 25px 0 0;
 }
 
-.u-section-4 .u-text-3 {
+.u-section-5 .u-text-3 {
   font-size: 1rem;
   font-weight: 700;
   margin: 26px auto 0;
 }
 
-.u-section-4 .u-table-1 {
+.u-section-5 .u-table-1 {
   width: 544px;
-  margin: 0 auto 25px;
+  margin: 0 auto;
 }
 
 .u-block-3ff8-12 {
   height: 46px;
 }
 
-.u-section-4 .u-table-cell-1 {
+.u-section-5 .u-table-cell-1 {
   background-image: none;
   font-weight: 700;
 }
 
-.u-section-4 .u-table-cell-2 {
+.u-section-5 .u-table-cell-2 {
   background-image: none;
   font-weight: 700;
 }
 
-.u-section-4 .u-table-cell-5 {
+.u-section-5 .u-table-cell-5 {
   background-image: none;
 }
 
-.u-section-4 .u-table-cell-6 {
+.u-section-5 .u-table-cell-6 {
   background-image: none;
 }
 
-.u-section-4 .u-table-cell-9 {
+.u-section-5 .u-table-cell-9 {
   background-image: none;
 }
 
-.u-section-4 .u-table-cell-10 {
+.u-section-5 .u-table-cell-10 {
   background-image: none;
 }
 
@@ -166,42 +178,30 @@
   height: 46px;
 }
 
-@media (max-width: 767px) {
-  .u-section-4 .u-table-1 {
-    width: 540px;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-4 .u-table-1 {
-    width: 340px;
-  }
-}.u-section-5 .u-sheet-1 {
-  min-height: 423px;
-}
-
-.u-section-5 .u-text-1 {
-  margin: 23px auto 0 0;
-}
-
-.u-section-5 .u-text-2 {
-  font-size: 1rem;
-  line-height: 3;
-  margin: 23px 0 0;
-}
-
-.u-section-5 .u-text-3 {
-  margin: 49px auto 0 0;
-}
-
 .u-section-5 .u-text-4 {
+  margin: 58px auto 0 0;
+}
+
+.u-section-5 .u-text-5 {
   font-size: 1rem;
   line-height: 1.8;
-  margin: 23px 0;
+  margin: 23px 0 25px;
 }
 
 .u-section-5 .u-btn-1 {
   background-image: none;
   font-size: 1rem;
   padding: 0;
+}
+
+@media (max-width: 767px) {
+  .u-section-5 .u-table-1 {
+    width: 540px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-5 .u-table-1 {
+    width: 340px;
+  }
 }
