--- a/Task2-T1-T2-mapping.css
+++ b/Task2-T1-T2-mapping.css
@@ -102,9 +102,9 @@
 .u-section-3 .u-image-3 {
   width: 211px;
   height: 48px;
-  margin: 439px auto 0;
+  margin: 439px auto 3045px;
 }.u-section-4 .u-sheet-1 {
-  min-height: 262px;
+  min-height: 453px;
 }
 
 .u-section-4 .u-text-1 {
@@ -112,18 +112,18 @@
 }
 
 .u-section-4 .u-text-2 {
+  font-weight: 400;
   font-size: 1rem;
   line-height: 3;
-  margin: 25px 50px 25px 0;
+  margin: 25px 20px 25px 0;
 }
 
 @media (max-width: 1199px) {
   .u-section-4 .u-text-2 {
-    font-weight: normal;
     margin-right: 0;
   }
 }.u-section-5 .u-sheet-1 {
-  min-height: 488px;
+  min-height: 409px;
 }
 
 .u-section-5 .u-text-1 {
@@ -131,10 +131,10 @@
 }
 
 .u-section-5 .u-text-2 {
-  font-weight: 400;
   font-size: 1rem;
   line-height: 3;
-  margin: 25px 20px 0 0;
+  font-weight: normal;
+  margin: 25px 50px 0 0;
 }
 
 .u-section-5 .u-text-3 {
@@ -144,7 +144,7 @@
 .u-section-5 .u-text-4 {
   font-size: 1rem;
   line-height: 1.8;
-  margin: 25px 0;
+  margin: 25px 0 26px;
 }
 
 .u-section-5 .u-btn-1 {
